plugins {
    id 'java'
    id 'com.diffplug.spotless' version '6.25.0'
    id 'jacoco'
    id 'io.freefair.aspectj.post-compile-weaving' version '8.4'
}

group = 'com.ganev.double-cache'
version = '1.2'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

jar {
    archiveBaseName = 'double-cache'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.aspectj:aspectjrt:${aspectjVersion}"
    implementation "org.aspectj:aspectjweaver:${aspectjVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.9 // 90% tests coverage
            }
        }
    }
}

spotless {
    java {
        googleJavaFormat()
        target 'src/**/*.java'
    }
}

test {
    useJUnitPlatform()
}